# epicsdev_rigol_scope

./: README.md  pyproject.toml
config/: epicsScopeLecroy_pp.py  epicsScopeRigol_pp.py  epicsScope_pp.py  epicsdev_rigol_scope_pp.py
epicsdev_rigol_scope/: __main__.py  mainModule.py
